# diagctl

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml
src/: cli.rs  color.rs  geom.rs  main.rs  svg.rs
src/ascii/: pipeline.rs
src/checks/: aspect.rs  contrast.rs  edge_crossings.rs  edge_node_overlap.rs  font_family.rs  label_overflow.rs  min_font_size.rs  min_stroke_width.rs  mod.rs  no_fixed_dimensions.rs  node_overlap.rs  viewbox.rs
src/commands/: ascii.rs  check.rs  freshness.rs  mod.rs  optimize.rs
src/geom/: seg.rs
tests/: cli.rs
