[package]
name = "diagctl"
version = "0.1.0"
edition = "2021"
description = "Hermetic CLI that automates the tech-diagramming quality gate"
license = "MIT"
repository = "https://github.com/driftsys/diagctl"

[dependencies]
clap = { version = "4", features = ["derive"] }
usvg = "0.45"
roxmltree = "0.20"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
